fixed layout bug, fixed image preloading bug

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -448,11 +448,11 @@ section.map {
 
 
 .L 	#content section.item{
-	width:					40rem;
+	width:					38rem;
 }
 
 .L 	#content section.item > *{
-	width:					38rem;
+	width:					36rem;
 }
 
 
